deploy/keycloack/ingress-for-keycloack.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-local
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://ubik-proxy, http://ubik-webapp"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak-local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-local
            port:
              number: 80
